--- a/package.json
+++ b/package.json
@@ -23,5 +23,12 @@
   "dependencies": {
     "d3-interpolate": "^1.1.5",
     "webpack": "^2.5.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-latest": "^6.24.0"
   }
 }
